# coe379L-sp24

./: Dockerfile  Dockerfile-llm  README.md  project3-grader.py  pyproject.toml  start_grader.sh
datasets/unit01/: employees.csv  used_cars_data.csv
datasets/unit02/: project2.data  used_cars_data2.csv
docs/: README.md  conf.py  index.rst
docs/projects/: project01.rst  project02.rst  project03.rst  project04.rst
docs/unit01/: class_intro.rst  class_vm.rst  eda.rst  intro_da_and_numpy.rst  overview.rst  pandas.rst
docs/unit02/: closing_remarks.rst  data_standardization_and_pipelines.rst  decision_tree_and_random_forrest.rst  knn.rst  linear_classification.rst  linear_regression.rst  log_regression_and_NB.rst  ml_intro.rst  model_persistence.rst  model_quality.rst  overview.rst  project01-summary.rst  spambase_solution.rst
docs/unit03/: cnn.rst  hands_on_cnn.rst  hands_on_nn.rst  mlops.rst  neural_networks.rst  overview.rst  project02-summary.rst
docs/unit04/: fine_tuning_transformers.rst  hands_on_transformers.rst  intro_to_transformers.rst  ml_benchmarks.rst  overview.rst  project03-summary.rst
