[tool.poetry]
name = "risd-course"
version = "0.1.0"
description = "Code for the Responsible Intelligent Systems Design course (379L)."
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
readme = "README.md"
packages = [{include = "risd_course"}]

[tool.poetry.dependencies]
python = "^3.10,>=3.11,<3.12"
numpy = "^1.25.0"
scikit-learn = "1.3.2"
ipython = "^8.14.0"
scikit-image = "^0.21.0"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
pandas = "^2.0.3"
seaborn = "^0.13.0"
sphinx = "^7.2.5"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.3.0"
sphinx-tabs = "^3.4.1"
tensorflow = "2.15.0"
tensorflow-datasets = "^4.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
